# pmdk-mp

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
src/: Makefile
src/benchmarks/: Makefile  malloc.cpp  obj_locks.cpp  perf.cfg  perf_backport_mp.csv  perf_backport_non-mp.csv  perf_final.cfg  perf_malloc.cfg  pmembench.cpp  pmembench_malloc.cfg
src/benchmarks/results/: perf_final.cfg  perf_final_131.csv  perf_final_mp.csv  perf_malloc.csv  perf_malloc_131.csv  pmembench_jemalloc.csv  pmembench_jemalloc_131.csv  pmembench_malloc.csv  pmembench_obj_pmalloc.csv  pmembench_obj_pmalloc_131.csv  pmembench_obj_pmalloc_mp.csv
src/common/: Makefile  file.c  file.h  os_shm.c  os_shm.h  os_thread.h  os_thread_linux.c  out.c  pool_hdr.h  set.c  set.h  sys_util.h
src/examples/: Makefile.inc
src/examples/libpmemobj/: Makefile
src/examples/libpmemobj/mp/reader_writer/: .gitignore  Makefile  layout.h  reader.c  startup.c  writer.c
src/examples/libpmemobj/mp/reader_writer_sync/: Makefile  reader.c  writer.c
src/examples/libpmemobj/mp_linkedlist/: .gitignore  Makefile  README  consume.sh  consumer.c  fifo.c  layout.h  produce.sh  producer.c
src/include/libpmemobj/: base.h  mp_base.h  pool_base.h  thread.h
src/libpmem/: Makefile
src/libpmemblk/: Makefile  blk.c
src/libpmemlog/: Makefile  log.c
src/libpmemobj/: Makefile  heap.c  heap.h  heap_layout.h  lane.c  lane.h  libpmemobj.def  libpmemobj.map  list.c  memblock.c  memops.c  mp.h  obj.c  obj.h  palloc.c  palloc.h  pmalloc.c  pmalloc.h  pmemops.h  redo.c  redo.h  registry.c  registry.h  shm_list.c  shm_list.h  sync.c  sync.h  tx.c
src/libpmempool/: Makefile  pool.c  replica.c  rm.c
src/librpmem/: Makefile
src/libvmem/: Makefile
src/libvmmalloc/: Makefile
src/mp_benchmarks/: Makefile  benchmark_time.c  benchmark_time.h  mp_bench.c  mp_bench_worker.c
src/test/: Makefile  Makefile.inc
src/test/ex_libpmemobj/: Makefile
src/test/obj_basic_integration/: Makefile  TEST0  TEST1  TEST2  TEST3  TEST4  TEST5  TEST6
src/test/obj_check/: TEST2  out3.log.match
src/test/obj_constructor/: TEST0  TEST1  TEST2
src/test/obj_debug/: grep0.log.match  grep1.log.match  grep2.log.match
src/test/obj_direct/: obj_direct.c
src/test/obj_fragmentation/: obj_fragmentation.c
src/test/obj_heap/: obj_heap.c
src/test/obj_heap_interrupt/: TEST0
src/test/obj_heap_state/: TEST0  TEST1  TEST2
src/test/obj_lane/: obj_lane.c
src/test/obj_layout/: obj_layout.c
src/test/obj_list/: obj_list_mocks.c  obj_list_mocks_palloc.c
src/test/obj_mp_basic_integration/: .gitignore  Makefile  TEST0  TEST1  TEST2  obj_mp_basic_integration.c
src/test/obj_mp_mwmr/: .gitignore  Makefile  TEST0  TEST1  obj_mp_mwmr.c
src/test/obj_mp_pmalloc_mt/: .gitignore  Makefile  TEST0  TEST0.PS1  TEST1  obj_mp_pmalloc_mt.c  obj_mp_pmalloc_mt.vcxproj  obj_mp_pmalloc_mt.vcxproj.filters
src/test/obj_mp_pool/: obj_mp_pool.c
src/test/obj_mp_pool_lock/: .gitignore  Makefile  TEST0  TEST0.PS1  obj_mp_pool_lock.c  obj_mp_pool_lock.vcxproj
src/test/obj_mp_resilience/: .gitignore  Makefile  TEST0  TEST0.PS1  TEST1  TEST1.PS1  TEST2  TEST2.PS1  obj_mp_resilience.c  obj_mp_resilience.vcxproj  obj_mp_resilience.vcxproj.filters  out1.log.match
src/test/obj_mp_swmr/: .gitignore  Makefile  TEST0  obj_mp_swmr.c
src/test/obj_oid/: obj_oid.c
src/test/obj_pmalloc_basic/: Makefile  TEST1  obj_pmalloc_basic.c
src/test/obj_pmalloc_mt/: TEST2  TEST3  obj_pmalloc_mt.c
src/test/obj_pmalloc_oom_mt/: TEST1
src/test/obj_pool_lookup/: obj_pool_lookup.c
src/test/obj_recovery/: TEST0  TEST1  TEST2  TEST3  TEST4  TEST5  TEST6  TEST7  TEST8
src/test/obj_redo_log/: obj_redo_log.c
src/test/obj_shm_list/: .gitignore  Makefile  TEST0  obj_shm_list.c  out0.log.match
src/test/obj_sync/: obj_sync.c
src/test/obj_tx_alloc/: TEST0  TEST1
src/test/obj_tx_realloc/: TEST0  TEST1
src/test/obj_zones/: README  TEST1  out0.log.match  out1.log.match
src/test/pmemspoil/: Makefile  TEST0
src/test/tools/pmemalloc/: Makefile
src/test/tools/pmemobjcli/: Makefile
src/test/tools/pmemspoil/: Makefile  README  spoil.c
src/test/tools/pmemwrite/: Makefile
src/test/unittest/: unittest.sh  ut_backtrace.c
src/test/util_poolset/: util_poolset.c
src/test/util_poolset_foreach/: util_poolset_foreach.c
src/tools/: Makefile.inc
src/tools/pmempool/: Makefile  common.c  convert_obj_v1_v2.c  convert_obj_v3_v4.c  info_obj.c  rm.c
src/tools/rpmemd/: rpmemd_db.c  rpmemd_fip_worker.c
utils/: check-os.sh  os-banned
