cmake_minimum_required(VERSION 3.7)
project(nvml)

# uncomment for debugging
#set(CMAKE_VERBOSE_MAKEFILE on)

set(CMAKE_C_STANDARD 99)
set(CMAKE_CXX_STANDARD 11)
include(GNUInstallDirs)

include_directories(src/common)
include_directories(src/include)
include_directories(src/test/unittest)
include_directories(src/examples)
#include_directories(src/windows/jemalloc_gen/include/jemalloc)
#include_directories(src/windows/include)

# for code completion in src/test
include_directories ("src/libpmemobj")

set(SOURCE_FILES
        src/benchmarks/benchmark.hpp
        src/benchmarks/benchmark_time.cpp
        src/benchmarks/benchmark_time.hpp
        src/benchmarks/benchmark_worker.cpp
        src/benchmarks/benchmark_worker.hpp
        src/benchmarks/blk.cpp
        src/benchmarks/clo.cpp
        src/benchmarks/clo.hpp
        src/benchmarks/clo_vec.cpp
        src/benchmarks/clo_vec.hpp
        src/benchmarks/config_reader.cpp
        src/benchmarks/config_reader.hpp
        src/benchmarks/config_reader_win.cpp
        src/benchmarks/log.cpp
        src/benchmarks/map_bench.cpp
        src/benchmarks/obj_lanes.cpp
        src/benchmarks/obj_locks.cpp
        src/benchmarks/obj_pmalloc.cpp
        src/benchmarks/malloc.cpp
        src/benchmarks/pmem_flush.cpp
        src/benchmarks/pmem_memcpy.cpp
        src/benchmarks/pmem_memset.cpp
        src/benchmarks/pmembench.cpp
        src/benchmarks/pmemobj_atomic_lists.cpp
        src/benchmarks/pmemobj_gen.cpp
        src/benchmarks/pmemobj_persist.cpp
        src/benchmarks/pmemobj_tx.cpp
        src/benchmarks/rpmem_persist.cpp
        src/benchmarks/scenario.cpp
        src/benchmarks/scenario.hpp
        src/benchmarks/vmem.cpp
        src/mp_benchmarks/mp_bench.c
        src/mp_benchmarks/benchmark_time.c
        src/common/dlsym.h
        src/common/file.c
        src/common/file.h
        src/common/file_linux.c
        src/common/file_windows.c
        src/common/mmap.c
        src/common/mmap.h
        src/common/mmap_linux.c
        src/common/mmap_windows.c
        src/common/os.h
        src/common/os_linux.c
        src/common/out.c
        src/common/out.h
        src/common/pmemcommon.h
        src/common/pool_hdr.c
        src/common/pool_hdr.h
        src/common/pool_hdr_linux.c
        src/common/pool_hdr_windows.c
        src/common/queue.h
        src/common/set.c
        src/common/set.h
        src/common/sys_util.h
        src/common/os_shm.h
        src/common/os_shm.c
        src/common/util.c
        src/common/util.h
        src/common/util_linux.c
        src/common/util_pmem.h
        src/common/util_windows.c
        src/common/uuid.c
        src/common/uuid.h
        src/common/uuid_linux.c
        src/common/uuid_windows.c
        src/common/valgrind_internal.h
        src/examples/libpmem/full_copy.c
        src/examples/libpmem/manpage.c
        src/examples/libpmem/simple_copy.c
        src/examples/libpmemblk/assetdb/asset.h
        src/examples/libpmemblk/assetdb/asset_checkin.c
        src/examples/libpmemblk/assetdb/asset_checkout.c
        src/examples/libpmemblk/assetdb/asset_list.c
        src/examples/libpmemblk/assetdb/asset_load.c
        src/examples/libpmemblk/manpage.c
        src/examples/libpmemlog/logfile/addlog.c
        src/examples/libpmemlog/logfile/logentry.h
        src/examples/libpmemlog/logfile/printlog.c
        src/examples/libpmemlog/manpage.c
        src/examples/libpmemobj/array/array.c
        src/examples/libpmemobj/cpp/queue.cpp
        src/examples/libpmemobj/cpp_map/ctree_map_persistent.hpp
        src/examples/libpmemobj/cpp_map/ctree_map_transient.hpp
        src/examples/libpmemobj/cpp_map/map_cli.cpp
        src/examples/libpmemobj/doc_snippets/make_persistent.cpp
        src/examples/libpmemobj/doc_snippets/mutex.cpp
        src/examples/libpmemobj/doc_snippets/persistent.cpp
        src/examples/libpmemobj/doc_snippets/pool.cpp
        src/examples/libpmemobj/doc_snippets/transaction.cpp
        src/examples/libpmemobj/hashmap/hashmap.h
        src/examples/libpmemobj/hashmap/hashmap_atomic.c
        src/examples/libpmemobj/hashmap/hashmap_atomic.h
        src/examples/libpmemobj/hashmap/hashmap_internal.h
        src/examples/libpmemobj/hashmap/hashmap_tx.c
        src/examples/libpmemobj/hashmap/hashmap_tx.h
        src/examples/libpmemobj/libart/art.h
        src/examples/libpmemobj/libart/arttree.c
        src/examples/libpmemobj/libart/arttree.h
        src/examples/libpmemobj/libart/arttree_examine.c
        src/examples/libpmemobj/libart/arttree_search.c
        src/examples/libpmemobj/libart/arttree_structures.c
        src/examples/libpmemobj/libart/arttree_structures.h
        src/examples/libpmemobj/linkedlist/fifo.c
        src/examples/libpmemobj/linkedlist/pmemobj_list.h
        src/examples/libpmemobj/list_map/skiplist_map.c
        src/examples/libpmemobj/list_map/skiplist_map.h
        src/examples/libpmemobj/map/data_store.c
        src/examples/libpmemobj/map/kv_protocol.h
        src/examples/libpmemobj/map/kv_server.c
        src/examples/libpmemobj/map/map.c
        src/examples/libpmemobj/map/map.h
        src/examples/libpmemobj/map/map_btree.c
        src/examples/libpmemobj/map/map_btree.h
        src/examples/libpmemobj/map/map_ctree.c
        src/examples/libpmemobj/map/map_ctree.h
        src/examples/libpmemobj/map/map_hashmap_atomic.c
        src/examples/libpmemobj/map/map_hashmap_atomic.h
        src/examples/libpmemobj/map/map_hashmap_tx.c
        src/examples/libpmemobj/map/map_hashmap_tx.h
        src/examples/libpmemobj/map/map_rbtree.c
        src/examples/libpmemobj/map/map_rbtree.h
        src/examples/libpmemobj/map/map_rtree.c
        src/examples/libpmemobj/map/map_rtree.h
        src/examples/libpmemobj/map/map_skiplist.c
        src/examples/libpmemobj/map/map_skiplist.h
        src/examples/libpmemobj/map/mapcli.c
        src/examples/libpmemobj/panaconda/panaconda.cpp
        src/examples/libpmemobj/panaconda/panaconda.hpp
        src/examples/libpmemobj/pman/pman.cpp
        src/examples/libpmemobj/pmemblk/obj_pmemblk.c
        src/examples/libpmemobj/pmemlog/obj_pmemlog.c
        src/examples/libpmemobj/pmemlog/obj_pmemlog_macros.c
        src/examples/libpmemobj/pmemlog/obj_pmemlog_minimal.c
        src/examples/libpmemobj/pmemlog/obj_pmemlog_simple.c
        src/examples/libpmemobj/pmemobjfs/pmemobjfs.c
        src/examples/libpmemobj/pminvaders/pminvaders.c
        src/examples/libpmemobj/pminvaders/pminvaders2.c
        src/examples/libpmemobj/mp/reader_writer/layout.h
        src/examples/libpmemobj/mp/reader_writer/writer.c
        src/examples/libpmemobj/mp/reader_writer/reader.c
        src/examples/libpmemobj/mp/reader_writer/startup.c
        src/examples/libpmemobj/mp/reader_writer_sync/writer.c
        src/examples/libpmemobj/mp/reader_writer_sync/reader.c
        src/examples/libpmemobj/string_store/layout.h
        src/examples/libpmemobj/string_store/reader.c
        src/examples/libpmemobj/string_store/writer.c
        src/examples/libpmemobj/string_store_tx/layout.h
        src/examples/libpmemobj/string_store_tx/reader.c
        src/examples/libpmemobj/string_store_tx/writer.c
        src/examples/libpmemobj/string_store_tx_type/layout.h
        src/examples/libpmemobj/string_store_tx_type/reader.c
        src/examples/libpmemobj/string_store_tx_type/writer.c
        src/examples/libpmemobj/btree.c
        src/examples/libpmemobj/list.hpp
        src/examples/libpmemobj/lists.c
        src/examples/libpmemobj/manpage.c
        src/examples/libpmemobj/pi.c
        src/examples/libpmemobj/setjmp.c
        src/examples/libpmempool/manpage.c
        src/examples/librpmem/basic.c
        src/examples/librpmem/manpage.c
        src/examples/libvmem/libart/art.c
        src/examples/libvmem/libart/art.h
        src/examples/libvmem/libart/arttree.c
        src/examples/libvmem/libart/arttree.h
        src/examples/libvmem/manpage.c
        src/examples/ex_common.h
        src/include/libpmemobj/atomic.h
        src/include/libpmemobj/atomic_base.h
        src/include/libpmemobj/base.h
        src/include/libpmemobj/ctl.h
        src/include/libpmemobj/iterator.h
        src/include/libpmemobj/iterator_base.h
        src/include/libpmemobj/lists_atomic.h
        src/include/libpmemobj/lists_atomic_base.h
        src/include/libpmemobj/pool.h
        src/include/libpmemobj/pool_base.h
        src/include/libpmemobj/thread.h
        src/include/libpmemobj/tx.h
        src/include/libpmemobj/tx_base.h
        src/include/libpmemobj/types.h
        src/include/libpmemobj++/detail/array_traits.hpp
        src/include/libpmemobj++/detail/check_persistent_ptr_array.hpp
        src/include/libpmemobj++/detail/common.hpp
        src/include/libpmemobj++/detail/conversions.hpp
        src/include/libpmemobj++/detail/integer_sequence.hpp
        src/include/libpmemobj++/detail/life.hpp
        src/include/libpmemobj++/detail/make_atomic_impl.hpp
        src/include/libpmemobj++/detail/persistent_ptr_base.hpp
        src/include/libpmemobj++/detail/pexceptions.hpp
        src/include/libpmemobj++/detail/specialization.hpp
        src/include/libpmemobj++/allocator.hpp
        src/include/libpmemobj++/condition_variable.hpp
        src/include/libpmemobj++/make_persistent.hpp
        src/include/libpmemobj++/make_persistent_array.hpp
        src/include/libpmemobj++/make_persistent_array_atomic.hpp
        src/include/libpmemobj++/make_persistent_atomic.hpp
        src/include/libpmemobj++/mutex.hpp
        src/include/libpmemobj++/p.hpp
        src/include/libpmemobj++/persistent_ptr.hpp
        src/include/libpmemobj++/pext.hpp
        src/include/libpmemobj++/pool.hpp
        src/include/libpmemobj++/shared_mutex.hpp
        src/include/libpmemobj++/timed_mutex.hpp
        src/include/libpmemobj++/transaction.hpp
        src/include/libpmemobj++/utils.hpp
        src/include/libpmem.h
        src/include/libpmemblk.h
        src/include/libpmemlog.h
        src/include/libpmemobj.h
        src/include/libpmempool.h
        src/include/librpmem.h
        src/include/libvmem.h
        src/include/libvmmalloc.h
        src/include/pmemcompat.h
        src/jemalloc/include/jemalloc/internal/arena.h
        src/jemalloc/include/jemalloc/internal/atomic.h
        src/jemalloc/include/jemalloc/internal/base.h
        src/jemalloc/include/jemalloc/internal/bitmap.h
        src/jemalloc/include/jemalloc/internal/chunk.h
        src/jemalloc/include/jemalloc/internal/chunk_dss.h
        src/jemalloc/include/jemalloc/internal/chunk_mmap.h
        src/jemalloc/include/jemalloc/internal/ckh.h
        src/jemalloc/include/jemalloc/internal/ctl.h
        src/jemalloc/include/jemalloc/internal/extent.h
        src/jemalloc/include/jemalloc/internal/hash.h
        src/jemalloc/include/jemalloc/internal/huge.h
        src/jemalloc/include/jemalloc/internal/jemalloc_internal_decls.h
        src/jemalloc/include/jemalloc/internal/jemalloc_internal_macros.h
        src/jemalloc/include/jemalloc/internal/mb.h
        src/jemalloc/include/jemalloc/internal/mutex.h
        src/jemalloc/include/jemalloc/internal/pool.h
        src/jemalloc/include/jemalloc/internal/prng.h
        src/jemalloc/include/jemalloc/internal/prof.h
        src/jemalloc/include/jemalloc/internal/ql.h
        src/jemalloc/include/jemalloc/internal/qr.h
        src/jemalloc/include/jemalloc/internal/quarantine.h
        src/jemalloc/include/jemalloc/internal/rb.h
        src/jemalloc/include/jemalloc/internal/rtree.h
        src/jemalloc/include/jemalloc/internal/stats.h
        src/jemalloc/include/jemalloc/internal/tcache.h
        src/jemalloc/include/jemalloc/internal/tsd.h
        src/jemalloc/include/jemalloc/internal/util.h
        src/jemalloc/include/jemalloc/internal/valgrind.h
        src/jemalloc/include/jemalloc/internal/vector.h
        src/jemalloc/include/msvc_compat/C99/inttypes.h
        src/jemalloc/include/msvc_compat/C99/stdbool.h
        src/jemalloc/include/msvc_compat/C99/stdint.h
        src/jemalloc/include/msvc_compat/inttypes.h
        src/jemalloc/include/msvc_compat/stdint.h
        src/jemalloc/include/msvc_compat/strings.h
        src/jemalloc/include/msvc_compat/windows_extra.h
        src/jemalloc/src/arena.c
        src/jemalloc/src/atomic.c
        src/jemalloc/src/base.c
        src/jemalloc/src/bitmap.c
        src/jemalloc/src/chunk.c
        src/jemalloc/src/chunk_dss.c
        src/jemalloc/src/chunk_mmap.c
        src/jemalloc/src/ckh.c
        src/jemalloc/src/ctl.c
        src/jemalloc/src/extent.c
        src/jemalloc/src/hash.c
        src/jemalloc/src/huge.c
        src/jemalloc/src/jemalloc.c
        src/jemalloc/src/mb.c
        src/jemalloc/src/mutex.c
        src/jemalloc/src/pool.c
        src/jemalloc/src/prof.c
        src/jemalloc/src/quarantine.c
        src/jemalloc/src/rtree.c
        src/jemalloc/src/stats.c
        src/jemalloc/src/tcache.c
        src/jemalloc/src/tsd.c
        src/jemalloc/src/util.c
        src/jemalloc/src/valgrind.c
        src/jemalloc/src/vector.c
        src/jemalloc/src/zone.c
        src/jemalloc/test/include/test/math.h
        src/jemalloc/test/include/test/mq.h
        src/jemalloc/test/include/test/mtx.h
        src/jemalloc/test/include/test/SFMT-alti.h
        src/jemalloc/test/include/test/SFMT-params.h
        src/jemalloc/test/include/test/SFMT-params11213.h
        src/jemalloc/test/include/test/SFMT-params1279.h
        src/jemalloc/test/include/test/SFMT-params132049.h
        src/jemalloc/test/include/test/SFMT-params19937.h
        src/jemalloc/test/include/test/SFMT-params216091.h
        src/jemalloc/test/include/test/SFMT-params2281.h
        src/jemalloc/test/include/test/SFMT-params4253.h
        src/jemalloc/test/include/test/SFMT-params44497.h
        src/jemalloc/test/include/test/SFMT-params607.h
        src/jemalloc/test/include/test/SFMT-params86243.h
        src/jemalloc/test/include/test/SFMT-sse2.h
        src/jemalloc/test/include/test/SFMT.h
        src/jemalloc/test/include/test/test.h
        src/jemalloc/test/include/test/thd.h
        src/jemalloc/test/integration/aligned_alloc.c
        src/jemalloc/test/integration/allocated.c
        src/jemalloc/test/integration/allocm.c
        src/jemalloc/test/integration/chunk.c
        src/jemalloc/test/integration/mallocx.c
        src/jemalloc/test/integration/MALLOCX_ARENA.c
        src/jemalloc/test/integration/mremap.c
        src/jemalloc/test/integration/posix_memalign.c
        src/jemalloc/test/integration/rallocm.c
        src/jemalloc/test/integration/rallocx.c
        src/jemalloc/test/integration/thread_arena.c
        src/jemalloc/test/integration/thread_tcache_enabled.c
        src/jemalloc/test/integration/xallocx.c
        src/jemalloc/test/src/math.c
        src/jemalloc/test/src/mtx.c
        src/jemalloc/test/src/SFMT.c
        src/jemalloc/test/src/test.c
        src/jemalloc/test/src/thd.c
        src/jemalloc/test/unit/bitmap.c
        src/jemalloc/test/unit/ckh.c
        src/jemalloc/test/unit/hash.c
        src/jemalloc/test/unit/junk.c
        src/jemalloc/test/unit/mallctl.c
        src/jemalloc/test/unit/math.c
        src/jemalloc/test/unit/mq.c
        src/jemalloc/test/unit/mtx.c
        src/jemalloc/test/unit/pool.h
        src/jemalloc/test/unit/pool_base_alloc.c
        src/jemalloc/test/unit/pool_custom_alloc.c
        src/jemalloc/test/unit/pool_custom_alloc_internal.c
        src/jemalloc/test/unit/prof_accum.c
        src/jemalloc/test/unit/prof_accum.h
        src/jemalloc/test/unit/prof_accum_a.c
        src/jemalloc/test/unit/prof_accum_b.c
        src/jemalloc/test/unit/prof_gdump.c
        src/jemalloc/test/unit/prof_idump.c
        src/jemalloc/test/unit/ql.c
        src/jemalloc/test/unit/qr.c
        src/jemalloc/test/unit/quarantine.c
        src/jemalloc/test/unit/rb.c
        src/jemalloc/test/unit/rtree.c
        src/jemalloc/test/unit/SFMT.c
        src/jemalloc/test/unit/stats.c
        src/jemalloc/test/unit/tsd.c
        src/jemalloc/test/unit/util.c
        src/jemalloc/test/unit/zero.c
        src/libpmem/cpu.c
        src/libpmem/cpu.h
        src/libpmem/libpmem.c
        src/libpmem/libpmem_main.c
        src/libpmem/pmem.c
        src/libpmem/pmem.h
        src/libpmem/pmem_linux.c
        src/libpmem/pmem_windows.c
        src/libpmemblk/blk.c
        src/libpmemblk/blk.h
        src/libpmemblk/btt.c
        src/libpmemblk/btt.h
        src/libpmemblk/btt_layout.h
        src/libpmemblk/libpmemblk.c
        src/libpmemblk/libpmemblk_main.c
        src/libpmemlog/libpmemlog.c
        src/libpmemlog/libpmemlog_main.c
        src/libpmemlog/log.c
        src/libpmemlog/log.h
        src/libpmemobj/alloc_class.c
        src/libpmemobj/alloc_class.h
        src/libpmemobj/bucket.c
        src/libpmemobj/bucket.h
        src/libpmemobj/container.h
        src/libpmemobj/container_ctree.c
        src/libpmemobj/container_ctree.h
        src/libpmemobj/container_seglists.c
        src/libpmemobj/container_seglists.h
        src/libpmemobj/ctl.c
        src/libpmemobj/ctl.h
        src/libpmemobj/ctl_global.c
        src/libpmemobj/ctl_global.h
        src/libpmemobj/ctree.c
        src/libpmemobj/ctree.h
        src/libpmemobj/cuckoo.c
        src/libpmemobj/cuckoo.h
        src/libpmemobj/heap.c
        src/libpmemobj/heap.h
        src/libpmemobj/heap_layout.h
        src/libpmemobj/lane.c
        src/libpmemobj/lane.h
        src/libpmemobj/libpmemobj.c
        src/libpmemobj/libpmemobj_main.c
        src/libpmemobj/list.c
        src/libpmemobj/list.h
        src/libpmemobj/memblock.c
        src/libpmemobj/memblock.h
        src/libpmemobj/memops.c
        src/libpmemobj/memops.h
        src/libpmemobj/obj.c
        src/libpmemobj/obj.h
        src/libpmemobj/palloc.c
        src/libpmemobj/palloc.h
        src/libpmemobj/pmalloc.c
        src/libpmemobj/pmalloc.h
        src/libpmemobj/pmemops.h
        src/libpmemobj/pvector.c
        src/libpmemobj/pvector.h
        src/libpmemobj/recycler.c
        src/libpmemobj/recycler.h
        src/libpmemobj/redo.c
        src/libpmemobj/redo.h
        src/libpmemobj/sync.c
        src/libpmemobj/sync.h
        src/libpmemobj/tx.c
        src/libpmemobj/tx.h
        src/libpmempool/check.c
        src/libpmempool/check.h
        src/libpmempool/check_backup.c
        src/libpmempool/check_btt_info.c
        src/libpmempool/check_btt_map_flog.c
        src/libpmempool/check_log_blk.c
        src/libpmempool/check_pool_hdr.c
        src/libpmempool/check_util.c
        src/libpmempool/check_util.h
        src/libpmempool/check_write.c
        src/libpmempool/libpmempool.c
        src/libpmempool/libpmempool_main.c
        src/libpmempool/pmempool.h
        src/libpmempool/pool.c
        src/libpmempool/pool.h
        src/libpmempool/replica.c
        src/libpmempool/replica.h
        src/libpmempool/rm.c
        src/libpmempool/sync.c
        src/libpmempool/transform.c
        src/librpmem/librpmem.c
        src/librpmem/rpmem.c
        src/librpmem/rpmem.h
        src/librpmem/rpmem_cmd.c
        src/librpmem/rpmem_cmd.h
        src/librpmem/rpmem_fip.c
        src/librpmem/rpmem_fip.h
        src/librpmem/rpmem_obc.c
        src/librpmem/rpmem_obc.h
        src/librpmem/rpmem_ssh.c
        src/librpmem/rpmem_ssh.h
        src/librpmem/rpmem_util.c
        src/librpmem/rpmem_util.h
        src/libvmem/libvmem.c
        src/libvmem/libvmem_main.c
        src/libvmem/vmem.c
        src/libvmem/vmem.h
        src/libvmmalloc/libvmmalloc.c
        src/libvmmalloc/vmmalloc.h
        src/rpmem_common/rpmem_common.c
        src/rpmem_common/rpmem_common.h
        src/rpmem_common/rpmem_common_log.h
        src/rpmem_common/rpmem_fip_common.c
        src/rpmem_common/rpmem_fip_common.h
        src/rpmem_common/rpmem_fip_lane.h
        src/rpmem_common/rpmem_fip_msg.h
        src/rpmem_common/rpmem_proto.h
        src/test/arch_flags/arch_flags.c
        src/test/blk_include/blk_include.c
        src/test/blk_nblock/blk_nblock.c
        src/test/blk_non_zero/blk_non_zero.c
        src/test/blk_pool/blk_pool.c
        src/test/blk_pool_lock/blk_pool_lock.c
        src/test/blk_pool_win/blk_pool_win.c
        src/test/blk_recovery/blk_recovery.c
        src/test/blk_rw/blk_rw.c
        src/test/blk_rw_mt/blk_rw_mt.c
        src/test/checksum/checksum.c
        src/test/ex_linkedlist/ex_linkedlist.c
        src/test/libpmempool_api/libpmempool_test.c
        src/test/libpmempool_api_win/libpmempool_test_win.c
        src/test/libpmempool_include/libpmempool_include.c
        src/test/libpmempool_rm/libpmempool_rm.c
        src/test/libpmempool_rm_win/libpmempool_rm_win.c
        src/test/libpmempool_sync/libpmempool_sync.c
        src/test/libpmempool_sync_win/libpmempool_sync_win.c
        src/test/libpmempool_transform/libpmempool_transform.c
        src/test/libpmempool_transform_win/libpmempool_transform_win.c
        src/test/log_basic/log_basic.c
        src/test/log_include/log_include.c
        src/test/log_pool/log_pool.c
        src/test/log_pool_lock/log_pool_lock.c
        src/test/log_pool_win/log_pool_win.c
        src/test/log_recovery/log_recovery.c
        src/test/log_walker/log_walker.c
        src/test/obj_basic_integration/obj_basic_integration.c
        src/test/obj_mp_basic_integration/obj_mp_basic_integration.c
        src/test/obj_bucket/obj_bucket.c
        src/test/obj_check/obj_check.c
        src/test/obj_constructor/obj_constructor.c
        src/test/obj_convert/obj_convert.c
        src/test/obj_cpp_allocator/obj_cpp_allocator.cpp
        src/test/obj_cpp_cond_var/obj_cpp_cond_var.cpp
        src/test/obj_cpp_cond_var_posix/obj_cpp_cond_var_posix.cpp
        src/test/obj_cpp_containers/cont_test_common.hpp
        src/test/obj_cpp_deque/obj_cpp_deque.cpp
        src/test/obj_cpp_list/obj_cpp_list.cpp
        src/test/obj_cpp_make_persistent/obj_cpp_make_persistent.cpp
        src/test/obj_cpp_make_persistent_array/obj_cpp_make_persistent_array.cpp
        src/test/obj_cpp_make_persistent_array_atomic/obj_cpp_make_persistent_array_atomic.cpp
        src/test/obj_cpp_make_persistent_atomic/obj_cpp_make_persistent_atomic.cpp
        src/test/obj_cpp_map/obj_cpp_map.cpp
        src/test/obj_cpp_multimap/obj_cpp_multimap.cpp
        src/test/obj_cpp_multiset/obj_cpp_multiset.cpp
        src/test/obj_cpp_mutex/obj_cpp_mutex.cpp
        src/test/obj_cpp_mutex_posix/obj_cpp_mutex_posix.cpp
        src/test/obj_cpp_p_ext/obj_cpp_p_ext.cpp
        src/test/obj_cpp_pool/obj_cpp_pool.cpp
        src/test/obj_cpp_pool_primitives/obj_cpp_pool_primitives.cpp
        src/test/obj_cpp_pool_win/obj_cpp_pool_win.cpp
        src/test/obj_cpp_priority_queue/obj_cpp_priority_queue.cpp
        src/test/obj_cpp_ptr/obj_cpp_ptr.cpp
        src/test/obj_cpp_ptr_arith/obj_cpp_ptr_arith.cpp
        src/test/obj_cpp_queue/obj_cpp_queue.cpp
        src/test/obj_cpp_set/obj_cpp_set.cpp
        src/test/obj_cpp_shared_mutex/obj_cpp_shared_mutex.cpp
        src/test/obj_cpp_shared_mutex_posix/obj_cpp_shared_mutex_posix.cpp
        src/test/obj_cpp_stack/obj_cpp_stack.cpp
        src/test/obj_cpp_timed_mtx/obj_cpp_timed_mtx.cpp
        src/test/obj_cpp_timed_mtx_posix/obj_cpp_timed_mtx_posix.cpp
        src/test/obj_cpp_transaction/obj_cpp_transaction.cpp
        src/test/obj_cpp_unordered_map/obj_cpp_unordered_map.cpp
        src/test/obj_cpp_unordered_multimap/obj_cpp_unordered_multimap.cpp
        src/test/obj_cpp_unordered_multiset/obj_cpp_unordered_multiset.cpp
        src/test/obj_cpp_unordered_set/obj_cpp_unordered_set.cpp
        src/test/obj_cpp_vector/obj_cpp_vector.cpp
        src/test/obj_ctl/obj_ctl.c
        src/test/obj_ctl_config/obj_ctl_config.c
        src/test/obj_ctl_prefault/obj_ctl_prefault.c
        src/test/obj_ctree/obj_ctree.c
        src/test/obj_cuckoo/obj_cuckoo.c
        src/test/obj_debug/obj_debug.c
        src/test/obj_direct/obj_direct.c
        src/test/obj_direct/obj_direct.h
        src/test/obj_direct/obj_direct_inline.c
        src/test/obj_direct/obj_direct_non_inline.c
        src/test/obj_first_next/obj_first_next.c
        src/test/obj_fragmentation/obj_fragmentation.c
        src/test/obj_heap/obj_heap.c
        src/test/obj_heap_interrupt/mocks_windows.h
        src/test/obj_heap_interrupt/obj_heap_interrupt.c
        src/test/obj_heap_state/obj_heap_state.c
        src/test/obj_include/obj_atomic_base_include.c
        src/test/obj_include/obj_atomic_include.c
        src/test/obj_include/obj_base_include.c
        src/test/obj_include/obj_iterator_base_include.c
        src/test/obj_include/obj_iterator_include.c
        src/test/obj_include/obj_lists_atomic_base_include.c
        src/test/obj_include/obj_lists_atomic_include.c
        src/test/obj_include/obj_pool_base_include.c
        src/test/obj_include/obj_pool_include.c
        src/test/obj_include/obj_thread_include.c
        src/test/obj_include/obj_tx_base_include.c
        src/test/obj_include/obj_tx_include.c
        src/test/obj_include/obj_types_include.c
        src/test/obj_lane/obj_lane.c
        src/test/obj_layout/obj_layout.c
        src/test/obj_list/mocks_windows.h
        src/test/obj_list/obj_list.c
        src/test/obj_list/obj_list.h
        src/test/obj_list/obj_list_mocks.c
        src/test/obj_list/obj_list_mocks_palloc.c
        src/test/obj_list_macro/obj_list_macro.c
        src/test/obj_shm_list/obj_shm_list.c
        src/test/obj_locks/obj_locks.c
        src/test/obj_many_size_allocs/obj_many_size_allocs.c
        src/test/obj_memblock/mocks_windows.h
        src/test/obj_memblock/obj_memblock.c
        src/test/obj_memcheck/obj_memcheck.c
        src/test/obj_oid/obj_oid.c
        src/test/obj_out_of_memory/obj_out_of_memory.c
        src/test/obj_persist_count/mocks_windows.h
        src/test/obj_persist_count/obj_persist_count.c
        src/test/obj_pmalloc_basic/obj_pmalloc_basic.c
        src/test/obj_pmalloc_mt/obj_pmalloc_mt.c
        src/test/obj_pmalloc_oom_mt/obj_pmalloc_oom_mt.c
        src/test/obj_pmalloc_rand_mt/obj_pmalloc_rand_mt.c
        src/test/obj_mp_pmalloc_mt/obj_mp_pmalloc_mt.c
        src/test/obj_pool/obj_pool.c
        src/test/obj_pool_lock/obj_pool_lock.c
        src/test/obj_mp_pool_lock/obj_mp_pool_lock.c
        src/test/obj_mp_resilience/obj_mp_resilience.c
        src/test/obj_pool_lookup/obj_pool_lookup.c
        src/test/obj_pool_win/obj_pool_win.c
        src/test/obj_pvector/obj_pvector.c
        src/test/obj_realloc/obj_realloc.c
        src/test/obj_recovery/obj_recovery.c
        src/test/obj_recreate/obj_recreate.c
        src/test/obj_redo_log/obj_redo_log.c
        src/test/obj_strdup/obj_strdup.c
        src/test/obj_sync/mocks_windows.h
        src/test/obj_sync/obj_sync.c
        src/test/obj_toid/obj_toid.c
        src/test/obj_tx_add_range/obj_tx_add_range.c
        src/test/obj_tx_add_range_direct/obj_tx_add_range_direct.c
        src/test/obj_tx_alloc/obj_tx_alloc.c
        src/test/obj_tx_callbacks/obj_tx_callbacks.c
        src/test/obj_tx_flow/obj_tx_flow.c
        src/test/obj_tx_free/obj_tx_free.c
        src/test/obj_tx_invalid/obj_tx_invalid.c
        src/test/obj_tx_lock/obj_tx_lock.c
        src/test/obj_tx_locks/obj_tx_locks.c
        src/test/obj_tx_locks_abort/obj_tx_locks_abort.c
        src/test/obj_tx_mt/obj_tx_mt.c
        src/test/obj_tx_realloc/obj_tx_realloc.c
        src/test/obj_tx_strdup/obj_tx_strdup.c
        src/test/out_err/out_err.c
        src/test/out_err_mt/out_err_mt.c
        src/test/out_err_mt_win/out_err_mt_win.c
        src/test/out_err_win/out_err_win.c
        src/test/pmem_include/pmem_include.c
        src/test/pmem_is_pmem/pmem_is_pmem.c
        src/test/pmem_is_pmem_linux/pmem_is_pmem_linux.c
        src/test/pmem_is_pmem_windows/pmem_is_pmem_windows.c
        src/test/pmem_map_file/mocks_linux.c
        src/test/pmem_map_file/mocks_windows.c
        src/test/pmem_map_file/mocks_windows.h
        src/test/pmem_map_file/pmem_map_file.c
        src/test/pmem_map_file_win/mocks_windows.c
        src/test/pmem_map_file_win/mocks_windows.h
        src/test/pmem_map_file_win/pmem_map_file_win.c
        src/test/pmem_memcpy/pmem_memcpy.c
        src/test/pmem_memmove/pmem_memmove.c
        src/test/pmem_memset/pmem_memset.c
        src/test/pmem_movnt/pmem_movnt.c
        src/test/pmem_movnt_align/pmem_movnt_align.c
        src/test/pmem_valgr_simple/pmem_valgr_simple.c
        src/test/remote_basic/remote_basic.c
        src/test/remote_obj_basic/remote_obj_basic.c
        src/test/rpmem_addr/rpmem_addr.c
        src/test/rpmem_basic/rpmem_basic.c
        src/test/rpmem_fip/rpmem_fip_oob.c
        src/test/rpmem_fip/rpmem_fip_oob.h
        src/test/rpmem_fip/rpmem_fip_test.c
        src/test/rpmem_obc/rpmem_obc_test.c
        src/test/rpmem_obc/rpmem_obc_test_close.c
        src/test/rpmem_obc/rpmem_obc_test_common.c
        src/test/rpmem_obc/rpmem_obc_test_common.h
        src/test/rpmem_obc/rpmem_obc_test_create.c
        src/test/rpmem_obc/rpmem_obc_test_misc.c
        src/test/rpmem_obc/rpmem_obc_test_open.c
        src/test/rpmem_obc/rpmem_obc_test_set_attr.c
        src/test/rpmem_obc_int/rpmem_obc_int.c
        src/test/rpmem_proto/rpmem_proto.c
        src/test/rpmemd_config/rpmemd_config_test.c
        src/test/rpmemd_db/rpmemd_db_test.c
        src/test/rpmemd_log/rpmemd_log_test.c
        src/test/rpmemd_obc/rpmemd_obc_test.c
        src/test/rpmemd_obc/rpmemd_obc_test_close.c
        src/test/rpmemd_obc/rpmemd_obc_test_common.c
        src/test/rpmemd_obc/rpmemd_obc_test_common.h
        src/test/rpmemd_obc/rpmemd_obc_test_create.c
        src/test/rpmemd_obc/rpmemd_obc_test_misc.c
        src/test/rpmemd_obc/rpmemd_obc_test_msg_hdr.c
        src/test/rpmemd_obc/rpmemd_obc_test_open.c
        src/test/rpmemd_obc/rpmemd_obc_test_set_attr.c
        src/test/set_funcs/set_funcs.c
        src/test/signal_handle/signal_handle.c
        src/test/tools/bttcreate/bttcreate.c
        src/test/tools/cmpmap/cmpmap.c
        src/test/tools/ctrld/ctrld.c
        src/test/tools/ddmap/ddmap.c
        src/test/tools/dllview/dllview.c
        src/test/tools/fip/fip.c
        src/test/tools/pmemalloc/pmemalloc.c
        src/test/tools/pmemdetect/pmemdetect.c
        src/test/tools/pmemobjcli/pmemobjcli.c
        src/test/tools/pmemspoil/spoil.c
        src/test/tools/pmemwrite/write.c
        src/test/tools/sparsefile/sparsefile.c
        src/test/traces/traces.c
        src/test/traces_custom_function/traces_custom_function.c
        src/test/traces_pmem/traces_pmem.c
        src/test/unittest/unittest.h
        src/test/unittest/ut.c
        src/test/unittest/ut_alloc.c
        src/test/unittest/ut_backtrace.c
        src/test/unittest/ut_file.c
        src/test/unittest/ut_pthread.c
        src/test/unittest/ut_signal.c
        src/test/util_cpuid/util_cpuid.c
        src/test/util_file_create/util_file_create.c
        src/test/util_file_open/util_file_open.c
        src/test/util_is_absolute/util_is_absolute.c
        src/test/util_is_poolset/util_is_poolset.c
        src/test/util_map_proc/util_map_proc.c
        src/test/util_parse_size/util_parse_size.c
        src/test/util_poolset/mocks.h
        src/test/util_poolset/mocks_linux.c
        src/test/util_poolset/mocks_windows.c
        src/test/util_poolset/mocks_windows.h
        src/test/util_poolset/util_poolset.c
        src/test/util_poolset_foreach/util_poolset_foreach.c
        src/test/util_poolset_parse/util_poolset_parse.c
        src/test/util_poolset_size/util_poolset_size.c
        src/test/util_uuid_generate/util_uuid_generate.c
        src/test/vmem_aligned_alloc/vmem_aligned_alloc.c
        src/test/vmem_calloc/vmem_calloc.c
        src/test/vmem_check/vmem_check.c
        src/test/vmem_check_allocations/vmem_check_allocations.c
        src/test/vmem_check_version/vmem_check_version.c
        src/test/vmem_create/vmem_create.c
        src/test/vmem_create_error/vmem_create_error.c
        src/test/vmem_create_in_region/vmem_create_in_region.c
        src/test/vmem_create_win/vmem_create_win.c
        src/test/vmem_custom_alloc/vmem_custom_alloc.c
        src/test/vmem_delete/vmem_delete.c
        src/test/vmem_malloc/vmem_malloc.c
        src/test/vmem_malloc_usable_size/vmem_malloc_usable_size.c
        src/test/vmem_mix_allocations/vmem_mix_allocations.c
        src/test/vmem_multiple_pools/vmem_multiple_pools.c
        src/test/vmem_out_of_memory/vmem_out_of_memory.c
        src/test/vmem_pages_purging/vmem_pages_purging.c
        src/test/vmem_realloc/vmem_realloc.c
        src/test/vmem_realloc_inplace/vmem_realloc_inplace.c
        src/test/vmem_stats/vmem_stats.c
        src/test/vmem_strdup/vmem_strdup.c
        src/test/vmem_valgrind/vmem_valgrind.c
        src/test/vmmalloc_calloc/vmmalloc_calloc.c
        src/test/vmmalloc_check_allocations/vmmalloc_check_allocations.c
        src/test/vmmalloc_fork/vmmalloc_fork.c
        src/test/vmmalloc_init/libtest.c
        src/test/vmmalloc_init/libtest.h
        src/test/vmmalloc_init/vmmalloc_init.c
        src/test/vmmalloc_malloc/vmmalloc_malloc.c
        src/test/vmmalloc_malloc_hooks/vmmalloc_malloc_hooks.c
        src/test/vmmalloc_malloc_usable_size/vmmalloc_malloc_usable_size.c
        src/test/vmmalloc_memalign/aligned_alloc.c
        src/test/vmmalloc_memalign/aligned_alloc.h
        src/test/vmmalloc_memalign/vmmalloc_memalign.c
        src/test/vmmalloc_out_of_memory/vmmalloc_out_of_memory.c
        src/test/vmmalloc_realloc/vmmalloc_realloc.c
        src/test/vmmalloc_valgrind/vmmalloc_valgrind.c
        src/test/vmmalloc_valloc/vmmalloc_valloc.c
        src/test/win_common/win_common.c
        src/test/win_getopt/win_getopt.c
        src/test/win_lists/win_lists.c
        src/test/win_mmap/win_mmap.c
        src/test/win_mmap_fixed/win_mmap_fixed.c
        src/test/win_signal/win_signal.c
        src/tools/pmempool/check.c
        src/tools/pmempool/check.h
        src/tools/pmempool/common.c
        src/tools/pmempool/common.h
        src/tools/pmempool/convert.c
        src/tools/pmempool/convert.h
        src/tools/pmempool/convert_obj_v1_v2.c
        src/tools/pmempool/create.c
        src/tools/pmempool/create.h
        src/tools/pmempool/dump.c
        src/tools/pmempool/dump.h
        src/tools/pmempool/info.c
        src/tools/pmempool/info.h
        src/tools/pmempool/info_blk.c
        src/tools/pmempool/info_log.c
        src/tools/pmempool/info_obj.c
        src/tools/pmempool/output.c
        src/tools/pmempool/output.h
        src/tools/pmempool/pmempool.c
        src/tools/pmempool/rm.c
        src/tools/pmempool/rm.h
        src/tools/pmempool/synchronize.c
        src/tools/pmempool/synchronize.h
        src/tools/pmempool/transform.c
        src/tools/pmempool/transform.h
        src/tools/rpmemd/rpmemd.c
        src/tools/rpmemd/rpmemd.h
        src/tools/rpmemd/rpmemd_config.c
        src/tools/rpmemd/rpmemd_config.h
        src/tools/rpmemd/rpmemd_db.c
        src/tools/rpmemd/rpmemd_db.h
        src/tools/rpmemd/rpmemd_fip.c
        src/tools/rpmemd/rpmemd_fip.h
        src/tools/rpmemd/rpmemd_log.c
        src/tools/rpmemd/rpmemd_log.h
        src/tools/rpmemd/rpmemd_obc.c
        src/tools/rpmemd/rpmemd_obc.h
        #        src/windows/getopt/getopt.c
        #        src/windows/getopt/getopt.h
        #        src/windows/win_mmap.c
        utils/check_license/check-license.c
        src/libpmemobj/mp.h
        src/test/obj_mp_swmr/obj_mp_swmr.c
        src/test/obj_mp_mwmr/obj_mp_mwmr.c
        src/test/obj_mp_pool/obj_mp_pool.c
        src/include/libpmemobj/mp_base.h
        src/libpmemobj/registry.h
        src/libpmemobj/registry.c
        src/examples/libpmemobj/mp_linkedlist/fifo.c
        src/examples/libpmemobj/mp_linkedlist/producer.c
        src/examples/libpmemobj/mp_linkedlist/layout.h
        src/examples/libpmemobj/mp_linkedlist/consumer.c
        src/libpmemobj/shm_list.h
        src/libpmemobj/shm_list.c src/mp_benchmarks/mp_bench_worker.c)

add_executable(${PROJECT_NAME}_dummy ${SOURCE_FILES})
set(CMD_ARGS EXTRA_CFLAGS=-DUSE_VALGRIND)
add_custom_target(${PROJECT_NAME} ALL COMMAND +make -C ${nvml_SOURCE_DIR} ${CMD_ARGS} COMMENT "Building ${PROJECT_NAME}")
